yaml/service-project006.yaml
apiVersion: v1
kind: Service
metadata:
  name: project006

spec:
  selector:
    app: project006

  ports:
    - name: http
      port: 8080
  type: NodePort
