yaml/service-project007.yaml
apiVersion: v1
kind: Service
metadata:
  name: project007

spec:
  selector:
    app: project007

  ports:
    - name: http
      port: 8081
  type: NodePort
