yaml/ingress-public-hello.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public-routing-hello
spec:
  rules:
    - host: hello.sidartasilva.io
      http:
        paths:
          - path: /
            backend:
              serviceName: project006
              servicePort: 8080
